syntax = "proto3";

package auth;

option go_package = "/auth";

import "google/api/annotations.proto";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {
        option(google.api.http) = {
            post: "/v1/auth/login"
            body: "*"
        };
    }

    rpc Signin(SigninRequest) returns (SigninResponse) {
        option(google.api.http) = {
            post: "/v1/auth/signin"
            body: "*"
        };
    }
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message SigninRequest {
    string email = 1;
    string password = 2;
}

message SigninResponse {
    string token = 1;
}